--- a/vignettes/spathial_vignette.Rmd
+++ b/vignettes/spathial_vignette.Rmd
@@ -251,27 +251,84 @@ statistics <- spathialStatistics(spathial_res)
 ```r
 #Plot the results
 corr_values <- as.numeric(unlist(statistics$correlations))
-correlation_matrix <- matrix(data=0, nrow = (length(corr_values)+1), ncol = (length(corr_values)+1))
-colnames(correlation_matrix) <- c(colnames(X), "pp")
-rownames(correlation_matrix) <- c(colnames(X), "pp")
-correlation_matrix[,ncol(correlation_matrix)] <- c(corr_values, 0)
-correlation_matrix[nrow(correlation_matrix),] <- c(corr_values, 0)
+
+sub_correlation_matrix <- matrix(data=0, nrow = (length(corr_values)), ncol = 1)
+colnames(sub_correlation_matrix) <- "pp"
+rownames(sub_correlation_matrix) <- colnames(X)
+sub_correlation_matrix[,ncol(sub_correlation_matrix)] <- corr_values
 
 library(corrplot)
 library(RColorBrewer)
-corrplot(correlation_matrix, type="upper", order="hclust",
-         col=brewer.pal(n=8, name="RdYlBu"))
+corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", cl.ratio = 1, cl.lim = c(-1,1))
 ```
 
 The following pictures show how much each feature is correlated with the evolution of the principal path (for both the principath paths with and without prefiltering):
-![prefiltering example](figures/constellation/corr_matrix_no_prefiltering.png)
-![prefiltering example](figures/constellation/corr_matrix_prefiltering.png)
+![prefiltering example](figures/constellation/correlations_no_prefiltering.png)
+![prefiltering example](figures/constellation/correlations_prefiltering.png)
 
 __N.B.__: all the other blocks are intentionally blank, beacuse not interesting for our goal.
 
+#A slightly more complex example
+In this section we show another example with more than 2-dimensions. In this case our input matrix ```X``` is a reduced version of the TCGA Thyroid Cancer dataset which is composed only by the 100 features (genes) with the highest variance. The vector ```X_labels``` contains the information about the patiens. In particular, the label is 2 when the patiens is healthy, 1 otherwise.
 
+In this case, the aim of the example is to navigate the space fram the centroid of the healthy patients to the centroid of the unhealthy patients in order to gradually morphing from one health state to the other.
 
+The prefiltering won't be executed since we are searching for a global solution.
 
+The following code chuncks show how to compute the principal path algorithm:
+
+```r
+#Load data
+myfile<-system.file("extdata", "thyroid_tcga_example1.csv", package = "spathial")
+data<-read.csv(myfile,as.is=TRUE,header=TRUE)
+X <- data[,2:(dim(data)[2]-1)]
+X_labels <- data[,dim(data)[2]]
+rownames(X)<-data[,1]
+
+#Choose the starting and the ending points
+boundary_init <- spathialBoundaryIds(X, X_labels, mode=2, from=2, to=1)
+boundary_ids <- boundary_init$boundary_ids
+X <- boundary_init$X
+X_labels <- boundary_init$X_labels
+
+# Compute spathial
+NC <- 50
+spathial_res <- spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
+```
+What follow is the code to analize the results, insted:
+
+```r
+# Analize the results
+#Labels for each waypoint with knn
+ppath_labels <- spathialLabels(X, X_labels, spathial_res)
+#Plot the path in 2D using Rtsne
+spathialPlot2D(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
+#Correlation along the path
+statistics <- spathialStatistics(spathial_res)
+```
+
+In this case, the statistics are particular interesting. 
+In fact, they contains information about the correlation between each feature (genes) of the principal path and a vector from 1 to NC+2 (where NC is the number of waypoints) and help to find the genes particularly involved with the evolution from the healthy to the unhealthy state.
+
+The following code chunck show how to plot the 20 features more involved in the evolution:
+
+```r
+corr_values <- as.numeric(unlist(statistics$correlations))
+arg_sort <- rank(-abs(corr_values))
+indexes <- which(arg_sort < 20)
+
+sub_correlation_matrix <- matrix(data=0, nrow = (length(indexes)), ncol = 1)
+colnames(sub_correlation_matrix) <- "pp"
+rownames(sub_correlation_matrix) <- colnames(X[indexes])
+sub_correlation_matrix[,ncol(sub_correlation_matrix)] <- corr_values[indexes]
+
+library(corrplot)
+library(RColorBrewer)
+corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", cl.ratio = 1, cl.lim = c(-1,1))
+
+```
+
+The following picture shows the corresponding output:
 
 
 
