plot_multiple_path (complete spathial plot) - vignettes part3

--- a/vignettes/spathial_vignette.Rmd
+++ b/vignettes/spathial_vignette.Rmd
@@ -59,7 +59,7 @@ plot(X[,1],X[,2], col=colors_labels,pch=as.character(X_labels))
 ```
 
 The following picture shows the graphical representation of the datapoints:
-![prefiltering example](figures/constellation/datapoints.png)
+![prefiltering example](figures/2D_constellation/datapoints.png)
 
 ## Step 2: select the boundaries
 The fist step to compute the principal path consists in selecting the starting and the ending points. The package spathial gives you the function ```spathialBoundaryIds``` which takes as input the matrix ```X```, the corresponding labels ```X_labels``` and the parameters ```mode```, ```from``` and ```to```.
@@ -110,7 +110,7 @@ points(boundaries[,1],boundaries[,2], pch="x",col="black",cex=4)
 ```
 
 The following picture shows the boundaries when ```mode=2```, ```from=3``` and ```to=6```:
-![prefiltering example](figures/constellation/boundaries.png)
+![prefiltering example](figures/2D_constellation/boundaries.png)
 
 ## Step 3: prefiltering (optional)
 The principal path is an algorithm intrinsically global. If you are searching for a path which does not involve the whole dataset, you can perform the function ```spathialPrefiltering```  before the principal path algorithm is applied, otherwise this filtering procedure is not due.
@@ -140,7 +140,7 @@ points(X_garbage[,1],X_garbage[,2], col="gray", pch=4)
 ```
 
 The following picture shows the result of the plot:
-![prefiltering example](figures/constellation/prefiltering.png)
+![prefiltering example](figures/2D_constellation/prefiltering.png)
 
 ## Step 4: principal path
 The function ```spathialWay``` computes the principal path algorithm and gives as output the principal path points. It takes as input the matrix ```X```, the labels ```X_labels```, the boundaries ```boundary_ids``` and the parameters ```NC``` and ```neighbors```. 
@@ -184,16 +184,16 @@ The following code chuncks show hot to use the function ```spathialPlot``` with 
 
 ```r
 #Plot principal path with prefiltering - mask not NULL
-spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30, mask)
+spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30, mask)
 
 #Plot principal path without prefiltering - mask NULL
-spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
+spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
 ```
 
 The following pictures show the output of the function ```spathialPlot``` for both the examples:
 
-![prefiltering example](figures/constellation/pp_no_prefiltering.png)
-![prefiltering example](figures/constellation/pp_prefiltering.png)
+![prefiltering example](figures/2D_constellation/pp_no_prefiltering.png)
+![prefiltering example](figures/2D_constellation/pp_prefiltering.png)
 
 ### Compute lables with Knn
 The function ```spathialLables``` assignes to each waypoints of the principal path a lables considering the labels of the nearest point in the data space. This type of analysis can be useful when you want to verify if the path moves respecting a specific evolution. The function takes as input the matrix ```X``` (which is composed only by the preserved samples if you compute the prefiltering), the vector ```X_labels``` and the output of the principal path algorithm ```spathial_res```. The output are the labels for each waypoints of the principal path.
@@ -202,7 +202,7 @@ The following code chuncks show how to use the function ```spathialLabels``` and
 
 ```r
 #Matrix X not filtered
-ppath_labels <- spathialLabels(X, X_labels, spathial_res)
+ppath_labels <- spathial::spathialLabels(X, X_labels, spathial_res)
 #Plot the results
 ppath_labels <- as.vector(ppath_labels)
 colors_labels_ppath <- sapply(ppath_labels, function(y){colors[as.integer(y)]})
@@ -212,7 +212,7 @@ plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as
 ```r
 #Matrix X filtered
 #Labels for each waypoint with knn
-ppath_labels <- spathialLabels(X_filtered, X_labels_filtered, spathial_res)
+ppath_labels <- spathial::spathialLabels(X_filtered, X_labels_filtered, spathial_res)
 
 #Plot the results
 ppath_labels<- as.vector(ppath_labels)
@@ -221,9 +221,9 @@ plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as
 ```
 
 The following pictures show the labels for each waypoint for both the previous examples:
-![prefiltering example](figures/constellation/labels.png)
+![prefiltering example](figures/2D_constellation/labels.png)
 
-![prefiltering example](figures/constellation/labels_no_prefiltering.png)
+![prefiltering example](figures/2D_constellation/labels_no_prefiltering.png)
 
 ### Compute the statistics
 The function ```spathialStatistics``` returns some statistics related to result of the principal path algorithm ```spathial_res```.
@@ -245,7 +245,7 @@ The following code chuncks show how to use the function ```spathialStatistics```
 
 ```r
 #Statistics about each feature of the path
-statistics <- spathialStatistics(spathial_res)
+statistics <- spathial::spathialStatistics(spathial_res)
 ```
 
 ```r
@@ -263,13 +263,13 @@ corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", c
 ```
 
 The following pictures show how much each feature is correlated with the evolution of the principal path (for both the principath paths with and without prefiltering):
-![prefiltering example](figures/constellation/correlations_no_prefiltering.png)
-![prefiltering example](figures/constellation/correlations_prefiltering.png)
+![prefiltering example](figures/2D_constellation/correlations_no_prefiltering.png)
+![prefiltering example](figures/2D_constellation/correlations_prefiltering.png)
 
 __N.B.__: all the other blocks are intentionally blank, beacuse not interesting for our goal.
 
 #A slightly more complex example
-In this section we show another example with more than 2-dimensions. In this case our input matrix ```X``` is a reduced version of the TCGA Thyroid Cancer dataset which is composed only by the 100 features (genes) with the highest variance. The vector ```X_labels``` contains the information about the patiens. In particular, the label is 2 when the patiens is healthy, 1 otherwise.
+In this section we show another example with more than 2-dimensions. In this case our input matrix ```X``` is a reduced version of the TCGA Liver Cancer dataset which is composed only by the 100 features (genes) with the highest variance. The vector ```X_labels``` contains the information about the patiens. In particular, the label is 2 when the patiens is healthy, 1 otherwise.
 
 In this case, the aim of the example is to navigate the space fram the centroid of the healthy patients to the centroid of the unhealthy patients in order to gradually morphing from one health state to the other.
 
@@ -279,33 +279,47 @@ The following code chuncks show how to compute the principal path algorithm:
 
 ```r
 #Load data
-myfile<-system.file("extdata", "thyroid_tcga_example1.csv", package = "spathial")
+myfile<-system.file("extdata", "liver_tcga_example1.csv", package = "spathial")
 data<-read.csv(myfile,as.is=TRUE,header=TRUE)
 X <- data[,2:(dim(data)[2]-1)]
 X_labels <- data[,dim(data)[2]]
 rownames(X)<-data[,1]
 
-#Choose the starting and the ending points
-boundary_init <- spathialBoundaryIds(X, X_labels, mode=2, from=2, to=1)
+# Choose the starting and the ending points
+boundary_init <- spathial::spathialBoundaryIds(X, X_labels, mode=2, from=2, to=1)#from="TCGA-DD-A39W-11A-11R-A213-07", to="TCGA-G3-AAV2-01A-11R-A37K-07")
 boundary_ids <- boundary_init$boundary_ids
 X <- boundary_init$X
 X_labels <- boundary_init$X_labels
 
 # Compute spathial
 NC <- 50
-spathial_res <- spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
+spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
 ```
-What follow is the code to analize the results, insted:
+What follow is the code to analize the results:
 
 ```r
-# Analize the results
 #Labels for each waypoint with knn
-ppath_labels <- spathialLabels(X, X_labels, spathial_res)
+ppath_labels <- spathial::spathialLabels(X, X_labels, spathial_res)
+
 #Plot the path in 2D using Rtsne
-spathialPlot2D(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
+spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
+
 #Correlation along the path
-statistics <- spathialStatistics(spathial_res)
+spathial::statistics <- spathialStatistics(spathial_res)
 ```
+The result of the ```spathialLabels``` function can be plotted with the following script:
+
+```r
+ppath_labels <- as.vector(ppath_labels)
+colors <- rainbow(length(table(X_labels)))
+colors_labels_ppath <- sapply(ppath_labels, function(y){colors[as.integer(y)]})
+plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as.character(ppath_labels))
+```
+
+The following pictures shows the labels of the principal path and the result of the function ```spathialPlot```:
+
+![prefiltering example](figures/liver_tcga/labels.png)
+![prefiltering example](figures/liver_tcga/pp_plot.png)
 
 In this case, the statistics are particular interesting. 
 In fact, they contains information about the correlation between each feature (genes) of the principal path and a vector from 1 to NC+2 (where NC is the number of waypoints) and help to find the genes particularly involved with the evolution from the healthy to the unhealthy state.
@@ -329,6 +343,16 @@ corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", c
 ```
 
 The following picture shows the corresponding output:
+![prefiltering example](figures/liver_tcga/correlation.png)
+
+This picture identifies the genes that could be particolarly involved during the evolution from healthy to unhealthy. 
+
+#How to work with high-dimensional data
+When you want to work with high dimensional data, one of the problem that could occur is the overfitting. This means that the principal path algorithm could find a lot of different features all correlated with the evolution from the starting point to the ending one. 
+
+If you are interested in finding a restricted group of features which are very correlated with the evolution, we suggest to use a more complex version of the function ```spathialWay```. It takes as input the parameter ```neighbour > 1``` and perform a refined version of the principal path algorithm.
+
+The following picture graphically explain how this version of the function ```spathialWay``` works when ```neighbour > 1```:
 
 
 
