--- a/vignettes/spathial_vignette.Rmd
+++ b/vignettes/spathial_vignette.Rmd
@@ -59,7 +59,8 @@ plot(X[,1],X[,2], col=colors_labels,pch=as.character(X_labels))
 ```
 
 The following picture shows the graphical representation of the datapoints:
-![prefiltering example](figures/2D_constellation/datapoints.png)
+
+![_2D constellation example - data points_](figures/2D_constellation/datapoints.png){width=75%}
 
 ## Step 2: select the boundaries
 The fist step to compute the principal path consists in selecting the starting and the ending points. The package spathial gives you the function ```spathialBoundaryIds``` which takes as input the matrix ```X```, the corresponding labels ```X_labels``` and the parameters ```mode```, ```from``` and ```to```.
@@ -110,7 +111,8 @@ points(boundaries[,1],boundaries[,2], pch="x",col="black",cex=4)
 ```
 
 The following picture shows the boundaries when ```mode=2```, ```from=3``` and ```to=6```:
-![prefiltering example](figures/2D_constellation/boundaries.png)
+
+![_2D constellation example - boundaries_](figures/2D_constellation/boundaries.png){width=75%}
 
 ## Step 3: prefiltering (optional)
 The principal path is an algorithm intrinsically global. If you are searching for a path which does not involve the whole dataset, you can perform the function ```spathialPrefiltering```  before the principal path algorithm is applied, otherwise this filtering procedure is not due.
@@ -140,27 +142,28 @@ points(X_garbage[,1],X_garbage[,2], col="gray", pch=4)
 ```
 
 The following picture shows the result of the plot:
-![prefiltering example](figures/2D_constellation/prefiltering.png)
+
+![_2D constellation example - prefiltering_](figures/2D_constellation/prefiltering.png){width=75%}
 
 ## Step 4: principal path
 The function ```spathialWay``` computes the principal path algorithm and gives as output the principal path points. It takes as input the matrix ```X```, the labels ```X_labels```, the boundaries ```boundary_ids``` and the parameters ```NC``` and ```neighbors```. 
 ```NC``` is the desired number of waypoints of the resulting principal path. For example, given ```NC=10``` the resulting principal path will be composed of 10 waypoints plus the starting and the ending points. 
 
-For the sake of simplicity, in this section we discuss only the simple version with ```neighbors=1```, which is the default value. We discuss more complex examples in the next section.
+For the sake of simplicity, in this section we discuss only the simple version with ```neighbors=0```, which is the default value. We discuss more complex examples in the next section.
 
 The output of the function ```spathialWay``` is a list with the following content:
 
 * __ppath__: the waypoints of the principal path;   
 * __perturbed_paths__: the waypoints of all the perturbed paths.
 
-With ```neighbors=1``` the value of the output ```perturbed_path``` will be always equal to ```NULL```.
+With ```neighbors=0``` the value of the output ```perturbed_path``` will be always equal to ```NULL```.
 
 The following code chuncks show how to use the function ```spathialWay```, with or without prefiltering, and how to extract the output:
 
 ```r
 # Compute principal path without prefiltering
 NC <- 50
-spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
+spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 0)
 ```
 
 ```r
@@ -168,7 +171,7 @@ spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors =
 X_filtered <- X[mask,]
 X_labels_filtered <- X_labels[mask]
 NC <- 50
-spathial_res <- spathial::spathialWay(X_filtered, X_labels_filtered, boundary_ids, NC, neighbors = 1)
+spathial_res <- spathial::spathialWay(X_filtered, X_labels_filtered, boundary_ids, NC, neighbors = 0)
 ```
 
 The next subsection shows hot to use the result ```spathial_res```.
@@ -192,8 +195,10 @@ spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value
 
 The following pictures show the output of the function ```spathialPlot``` for both the examples:
 
-![prefiltering example](figures/2D_constellation/pp_no_prefiltering.png)
-![prefiltering example](figures/2D_constellation/pp_prefiltering.png)
+![_2D constellation example - principal path without prefiltering_](figures/2D_constellation/pp_no_prefiltering.png){width=75%}
+
+
+![2D constellation example - principal path with prefiltering](figures/2D_constellation/pp_prefiltering.png){width=75%}
 
 ### Compute lables with Knn
 The function ```spathialLables``` assignes to each waypoints of the principal path a lables considering the labels of the nearest point in the data space. This type of analysis can be useful when you want to verify if the path moves respecting a specific evolution. The function takes as input the matrix ```X``` (which is composed only by the preserved samples if you compute the prefiltering), the vector ```X_labels``` and the output of the principal path algorithm ```spathial_res```. The output are the labels for each waypoints of the principal path.
@@ -221,9 +226,11 @@ plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as
 ```
 
 The following pictures show the labels for each waypoint for both the previous examples:
-![prefiltering example](figures/2D_constellation/labels.png)
 
-![prefiltering example](figures/2D_constellation/labels_no_prefiltering.png)
+![_2D constellation example - labels of the principal path without prefiltering_](figures/2D_constellation/labels_no_prefiltering.png){width=75%}
+
+
+![_2D constellation example - labels of the principal path with prefiltering_](figures/2D_constellation/labels.png){width=75%}
 
 ### Compute the statistics
 The function ```spathialStatistics``` returns some statistics related to result of the principal path algorithm ```spathial_res```.
@@ -235,7 +242,7 @@ For this reason, the output of the function ```spathialStatistics``` is a list w
 * __fisher_correlations__; gives for each f
 * __rank_scores__.
 
-Given the simplified scenario where the parameter ```neighbors``` of the function ```spathialWay``` is always equal to ```1```, the output of the function ```spathialStatistics``` is simplified as follow:
+Given the simplified scenario where the parameter ```neighbors``` of the function ```spathialWay``` is always equal to ```0```, the output of the function ```spathialStatistics``` is simplified as follow:
 
 * __correlations__: gives for each features the correlation value with the evolution of the principal path;
 * __fisher_correlations__: NULL;
@@ -263,8 +270,11 @@ corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", c
 ```
 
 The following pictures show how much each feature is correlated with the evolution of the principal path (for both the principath paths with and without prefiltering):
-![prefiltering example](figures/2D_constellation/correlations_no_prefiltering.png)
-![prefiltering example](figures/2D_constellation/correlations_prefiltering.png)
+
+![_2D constellation example - correlation features/evolution without prefiltering_](figures/2D_constellation/correlations_no_prefiltering.png){width=35%} 
+
+![_2D constellation example - correlation features/evolution with prefiltering_](figures/2D_constellation/correlations_prefiltering.png){width=35%}
+
 
 __N.B.__: all the other blocks are intentionally blank, beacuse not interesting for our goal.
 
@@ -293,7 +303,7 @@ X_labels <- boundary_init$X_labels
 
 # Compute spathial
 NC <- 50
-spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
+spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 0)
 ```
 What follow is the code to analize the results:
 
@@ -318,8 +328,9 @@ plot(c(1:length(ppath_labels)), c(ppath_labels), col=colors_labels_ppath, pch=as
 
 The following pictures shows the labels of the principal path and the result of the function ```spathialPlot```:
 
-![prefiltering example](figures/liver_tcga/labels.png)
-![prefiltering example](figures/liver_tcga/pp_plot.png)
+![_Liver example: principal path labels_](figures/liver_tcga_singlepath/labels.png){width=50%}
+
+![_Liver example: principal path_](figures/liver_tcga_singlepath/pp_plot.png){width=50%}
 
 In this case, the statistics are particular interesting. 
 In fact, they contains information about the correlation between each feature (genes) of the principal path and a vector from 1 to NC+2 (where NC is the number of waypoints) and help to find the genes particularly involved with the evolution from the healthy to the unhealthy state.
@@ -343,16 +354,73 @@ corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", c
 ```
 
 The following picture shows the corresponding output:
-![prefiltering example](figures/liver_tcga/correlation.png)
+
+![_Liver example: correlation feature/evolution_](figures/liver_tcga_singlepath/correlation.png){width=50%}
 
 This picture identifies the genes that could be particolarly involved during the evolution from healthy to unhealthy. 
 
 #How to work with high-dimensional data
-When you want to work with high dimensional data, one of the problem that could occur is the overfitting. This means that the principal path algorithm could find a lot of different features all correlated with the evolution from the starting point to the ending one. 
+When you want to work with high dimensional data, one of the problems that could occur is the overfitting. This means that the principal path algorithm could find a lot of different features all correlated with the evolution from the starting point to the ending one. 
 
-If you are interested in finding a restricted group of features which are very correlated with the evolution, we suggest to use a more complex version of the function ```spathialWay```. It takes as input the parameter ```neighbour > 1``` and perform a refined version of the principal path algorithm.
+If you are interested in finding a restricted group of features which are very correlated with the evolution, we suggest to use a more complex version of the function ```spathialWay```. It takes as input the parameter ```neighbour > 0``` and perform a refined version of the principal path algorithm.
 
-The following picture graphically explain how this version of the function ```spathialWay``` works when ```neighbour > 1```:
+The following picture graphically explain how this version of the function ```spathialWay``` works when ```neighbour = 2```:
+
+![_Graphical examplanetion of the perturbed path_](figures/liver_tcga_multipath/simple_multipath_example.png){width=50%}
+
+It selects the ```neighbour``` nearest data points to the starting and the ending points and computes the principal path algorithm for each combination. This refined procedure allows to compute ```neighbour*neighbour``` paths: one of them is the normal principal path and the others can be considered as perturbation of the first one.
+
+The correlation can now be computed as mean of the correlations of each path. In this case, the statistics output is enriched with the ```fisher_correlations``` and the ```rank_scores``` parameters.
+
+The following code chunck shows an example of the ```spathialWay``` function with ```neighbour = 1``` and the same dataset of the previous example:
+
+```r
+####Load input data
+myfile<-system.file("extdata", "liver_tcga_example1.csv", package = "spathial")
+data<-read.csv(myfile,as.is=TRUE,header=TRUE)
+X <- data[,2:(ncol(data)-1)]
+rownames(X)<-paste0("sam",rownames(X))
+X_labels <- data$Y
+
+#### Choose the starting and the ending points
+boundary_init <- spathialBoundaryIds(X, X_labels, mode=2, from=2, to=1)
+boundary_ids <- boundary_init$boundary_ids
+X <- boundary_init$X
+X_labels <- boundary_init$X_labels
+
+# Compute spathial
+NC <- 50
+spathial_res <- spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
+
+#Plot the path in 2D using Rtsne
+spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30)
+
+# ####Correlation along the path
+statistics <- spathialStatistics(spathial_res)
+
+#Plot the results
+corr_values <- as.numeric(unlist(statistics$correlations))
+arg_sort <- rank(-abs(corr_values))
+indexes <- which(arg_sort < 20)
+
+sub_correlation_matrix <- matrix(data=0, nrow = (length(indexes)), ncol = 1)
+colnames(sub_correlation_matrix) <- "pp"
+rownames(sub_correlation_matrix) <- colnames(X[indexes])
+sub_correlation_matrix[,ncol(sub_correlation_matrix)] <- corr_values[indexes]
+
+library(corrplot)
+library(RColorBrewer)
+corrplot(sub_correlation_matrix, method="circle", is.corr=FALSE, cl.pos = "r", cl.ratio = 1, cl.lim = c(-1,1))
+```
+
+The following pictures show the output of the example:
+
+![_Liver example: principal and perturbed paths_](figures/liver_tcga_multipath/multipath.png){ width=50% }
+
+__Warning__: the grater is the value of the parameter ```neighbour > 5```, the slower is the algorithm. Our recommendation is to use ```neighbour < 5```. 
+
+
+
 
 
 
